--- a/index.html
+++ b/index.html
@@ -47,5 +47,45 @@
             </div>
         </div>
     </nav>
+    <div class="hero">
+        <h2>Hello, I am</h2>
+        <h1 class="mb-3">Maya Zirne</h1>
+        <h3 class="mb-5">/ˈmaː.jaː/ <br /> Aspiring Front-end Developer, based in London, UK</h3>
+        <div>
+            <a href="contact.html" class="btn btn-branding" title="Contact Maya Zirne">CONTACT ME</a>
+        </div>
+    </div>
+    <div class="middle-hero">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-3 col-md-offset-4"> 
+                <a href="about.html" class="btn btn-branding" title="Contact Maya Zirne">LEARN MORE ABOUT ME</a>
+            </div>
+            <div class="col-md-2">
+                <img src="images/portrait.svg" class="img-fluid" alt="My Portrait">
+            </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-hero">
+        <h2 class="mb-4">Featured Projects</h2>
+        <a href="https://hopeful-poincare-7b41bf.netlify.app" target=”_blank” title="View Weather App Project">
+        <img src="images/weather-home.svg" class="img-fluid" alt="Neon Weather App">
+    </a>
+    <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-37-0/projects/141317" target=”_blank” title="View SheTravels Project">
+        <img src="images/shetravels-home.svg" class="img-fluid" alt="SheTravels landing page">
+        </a>
+    </div>
+    <footer>
+        <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank”>
+        <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="https://www.instagram.com/mayazirne/" target=”_blank”>
+        <i class="fab fa-instagram"></i>
+        </a>
+        <a href="https://github.com/mayazirne" target=”_blank”>
+        <i class="fab fa-github"></i>
+        </a>
+    </footer>
 </body>
 </html>
