Created about and work pages

--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,30 @@
         </div>
     </div>
 </nav>
+<div class="contact-container">
+    <div class="container contact-header">
+    <h1>Get in Touch</h1>
+    </div>
+    <div class="contact-info">
+        <h5>EMAIL</h5>
+        <p>mayazirne@gmail.com</p>
+        <h5>LINKEDIN</h5>
+        <p>Maya Zirne</p>
+        <h5>INSTAGRAM</h5>
+        <p>@mayazirne</p>
+    </div>
+</div>
+<footer>
+    <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank”>
+        <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://www.instagram.com/mayazirne/" target=”_blank”>
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://github.com/mayazirne/portfolio-project-mz" target=”_blank”>
+        <i class="fab fa-github"></i>
+    </a>
+</footer>
 </body>
 
 </html>
