--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
     <div class="hero">
-        <h2>Hello, I am</h2>
+        <h4>Hello, I am</h4>
         <h1 class="mb-3">Maya Zirne</h1>
         <h3 class="mb-5">/ˈmaː.jaː/ <br /> Aspiring Front-end Developer, based in London, UK</h3>
         <div>
@@ -58,11 +58,11 @@
     <div class="middle-hero">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-3 col-md-offset-4"> 
-                <a href="about.html" class="btn btn-branding" title="Contact Maya Zirne">LEARN MORE ABOUT ME</a>
+                <div class="col my-auto"> 
+                <a href="about.html" class="btn btn-branding float-end" title="Contact Maya Zirne">LEARN MORE ABOUT ME</a>
             </div>
-            <div class="col-md-2">
-                <img src="images/portrait.svg" class="img-fluid" alt="My Portrait">
+            <div class="col">
+                <img src="images/portrait.svg" class="img-fluid float-start" alt="My Portrait">
             </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
         <a href="https://www.instagram.com/mayazirne/" target=”_blank”>
         <i class="fab fa-instagram"></i>
         </a>
-        <a href="https://github.com/mayazirne" target=”_blank”>
+        <a href="https://github.com/mayazirne/portfolio-project-mz" target=”_blank”>
         <i class="fab fa-github"></i>
         </a>
     </footer>
