--- a/work.html
+++ b/work.html
@@ -49,6 +49,70 @@
         </div>
     </div>
 </nav>
+<h3 class="mt-3 mb-0">Check out my</h3>
+<h2>Projects</h2>
+<div class="container work-container">
+    <div class="row">
+        <div class="col d-none d-lg-block">
+            <img src="images/weather-work.png" class="img-fluid float-end" alt="Weather app" />
+        </div>
+        <div class="col">
+            <div class="project-description text-start me-5">
+                <h3 class="mb-4">Neon Weather App</h3>
+                <p class="fw-light">
+                    A fun weather application that I built as part of SheCodes React Workshop that uses OpenWeatherMap API to pull data for
+                    over 200,000 cities across the globe. Built with HTML, CSS, JS & React
+                </p>
+                <div class="mt-5">
+                    <a href="https://hopeful-poincare-7b41bf.netlify.app" target="_blank" class="btn btn-branding" title="Check out Weather App">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col">
+            <div class="project-description2 text-end ms-5">
+                <h3 class="mb-4">SheTravels Landing Page</h3>
+                <p class="fw-light">
+                    A simple landing page that I built as part of SheCodes Basics Workshop. Built with HTML, CSS & JS
+                </p>
+                <div class="mt-5">
+                    <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-37-0/projects/141317" class="btn btn-branding" title="Check out SheTravels Page">Learn more</a>
+                </div>
+            </div>
+        </div>
+        <div class="col d-none d-lg-block">
+            <img src="images/shetravels-work.png" class="img-fluid float-start" alt="SheTravels page" />
+        </div>
+    </div>
+    <div class="row mt-5">
+        <div class="col d-none d-lg-block">
+            <img src="images/dictionary.png" class="img-fluid float-end" alt="Coming soon" />
+        </div>
+        <div class="col">
+            <div class="project-description text-start">
+                <h3 class="mb-4">Dictionary App</h3>
+                <p class="fw-light">
+                    Watch this space ;)
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="wrapper">
+    <a href="contact.html" class="btn btn-branding" title="Check out my pojects">GET IN TOUCH</a>
+</div>
+<footer>
+    <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank”>
+        <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://www.instagram.com/mayazirne/" target=”_blank”>
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://github.com/mayazirne/portfolio-project-mz" target=”_blank”>
+        <i class="fab fa-github"></i>
+    </a>
+</footer>
 </body>
 
 </html>
