--- a/about.html
+++ b/about.html
@@ -48,6 +48,42 @@
         </div>
     </div>
 </nav>
+<div class="content-container container">
+    <div class="row">
+        <div class="col-lg-6">
+            <img src="images/photo.svg" alt="my photo" class="img-fluid float-end"/>
+        </div>
+        <div class="col-lg-6 my-auto">
+            <div class="about-content mt-4 text-start me-5">
+                <h3 class="mb-1">About me</h3>
+                <h2 class="mb-4">Maya</h2>
+                <p class="fw-bold mb-1">
+                    It is nice to meet you!
+                </p>
+                    <p class="fw-light">
+                    I am Latvian living in London, UK. Just like many of us in 2020, I wanted to challenge myself
+                    and, in addition to my day job in HR, learn new skills which brought me to the wonderful world of coding (thank you,
+                    SheCodes!). I am now looking to advance my front-end development skills by taking on new projects and dive into the
+                    world of UX design.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="wrapper">
+    <a href="work.html" class="btn btn-branding" title="Check out my pojects">CHECK OUT MY PROJECTS</a>
+</div>
+<footer>
+    <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank”>
+        <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://www.instagram.com/mayazirne/" target=”_blank”>
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://github.com/mayazirne/portfolio-project-mz" target=”_blank”>
+        <i class="fab fa-github"></i>
+    </a>
+</footer>
 </body>
 
 </html>
