Created contact page

--- a/contact.html
+++ b/contact.html
@@ -50,16 +50,18 @@
     </div>
 </nav>
 <div class="contact-container">
-    <div class="container contact-header">
+    <div class="container contact-header mb-5">
     <h1>Get in Touch</h1>
     </div>
     <div class="contact-info">
         <h5>EMAIL</h5>
-        <p>mayazirne@gmail.com</p>
+        <p> <i class="fas fa-envelope"></i> <a href="mailto:mayazirne@gmail.com">  mayazirne@gmail.com</a></p>
+        <br />
         <h5>LINKEDIN</h5>
-        <p>Maya Zirne</p>
+        <p> <i class="fab fa-linkedin"></i> <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank"> Maya Zirne</a></p>
+        <br />
         <h5>INSTAGRAM</h5>
-        <p>@mayazirne</p>
+        <p><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/mayazirne/" target=”_blank”> @mayazirne</a></p>
     </div>
 </div>
 <footer>
