Re-styled contact page

--- a/about.html
+++ b/about.html
@@ -48,10 +48,10 @@
         </div>
     </div>
 </nav>
-<div class="content-container container">
+<div class="about-container container">
     <div class="row">
         <div class="col-lg-6">
-            <img src="images/photo.svg" alt="my photo" class="img-fluid float-end"/>
+            <img src="images/photo.png" alt="my photo" class="img-fluid float-end"/>
         </div>
         <div class="col-lg-6 my-auto">
             <div class="about-content mt-4 text-start me-5">
