--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,7 @@
         <br />
         <h5>INSTAGRAM</h5>
         <p><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/mayazirne/" target=”_blank”> @mayazirne</a></p>
+        <a href="/" class="btn btn-branding mobile-btn mt-5" title="Check out my pojects">BACK TO HOMEPAGE</a>
     </div>
 </div>
 <footer>
