Added scroll down arrow

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
         <h1 class="mb-3">Maya Zirne</h1>
         <h3 class="mb-5">/ˈmaː.jaː/ <br /> Aspiring Front-end Developer, based in London, UK</h3>
         <div>
-            <a href="contact.html" class="btn btn-branding" title="Contact Maya Zirne">CONTACT ME</a>
+            <a href="contact.html" class="btn btn-branding mb-5" title="Contact Maya Zirne">CONTACT ME</a>
+        </div>
+        <div class="arrow">
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
     <div class="middle-hero">
@@ -70,7 +75,7 @@
     <div class="bottom-hero">
         <h2 class="mb-4">Featured Projects</h2>
         <a href="https://hopeful-poincare-7b41bf.netlify.app" target=”_blank” title="View Weather App Project">
-        <img src="images/weather-home.svg" class="img-fluid" alt="Neon Weather App">
+            <img src="images/weather-home.svg" class="img-fluid" alt="Neon Weather App">
     </a>
     <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-37-0/projects/141317" target=”_blank” title="View SheTravels Project">
         <img src="images/shetravels-home.svg" class="img-fluid" alt="SheTravels landing page">
