--- a/about.html
+++ b/about.html
@@ -50,11 +50,8 @@
 </nav>
 <div class="about-container container">
     <div class="row">
-        <div class="col-lg-6">
-            <img src="images/photo.png" alt="my photo" class="img-fluid float-end"/>
-        </div>
-        <div class="col-lg-6 my-auto">
-            <div class="about-content mt-4 text-start me-5">
+        <div class="col-md-6 my-auto">
+            <div class="about-content mt-4">
                 <h3 class="mb-1">About me</h3>
                 <h2 class="mb-4">Maya</h2>
                 <p class="fw-bold mb-1">
@@ -67,6 +64,9 @@
                     world of UX design.
                 </p>
             </div>
+        </div>
+        <div class="col-md-6">
+            <img src="images/photo.png" alt="my photo" class="img-fluid" />
         </div>
     </div>
 </div>
