--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <h1 class="mb-3">Maya Zirne</h1>
         <h3 class="mb-5">/ˈmaː.jaː/ <br /> Aspiring Front-end Developer, based in London, UK</h3>
         <div>
-            <a href="contact.html" class="btn btn-branding mb-5" title="Contact Maya Zirne">CONTACT ME</a>
+            <a href="contact.html" class="btn btn-branding mb-4" title="Contact Maya Zirne">CONTACT ME</a>
         </div>
-        <div class="arrow">
+        <div class="arrow mt-5">
             <span></span>
             <span></span>
             <span></span>
