--- a/work.html
+++ b/work.html
@@ -53,11 +53,11 @@
 <h2>Projects</h2>
 <div class="container work-container">
     <div class="row">
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-sm-block">
             <img src="images/weather-work.png" class="img-fluid float-end" alt="Weather app" />
         </div>
         <div class="col">
-            <div class="project-description text-start me-5">
+            <div class="project-description">
                 <h3 class="mb-4">Neon Weather App</h3>
                 <p class="fw-light">
                     A fun weather application that I built as part of SheCodes React Workshop that uses OpenWeatherMap API to pull data for
@@ -71,7 +71,7 @@
     </div>
     <div class="row mt-5">
         <div class="col">
-            <div class="project-description2 text-end ms-5">
+            <div class="project-description2">
                 <h3 class="mb-4">SheTravels Landing Page</h3>
                 <p class="fw-light">
                     A simple landing page that I built as part of SheCodes Basics Workshop. Built with HTML, CSS & JS
@@ -81,12 +81,12 @@
                 </div>
             </div>
         </div>
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-sm-block">
             <img src="images/shetravels-work.png" class="img-fluid float-start" alt="SheTravels page" />
         </div>
     </div>
     <div class="row mt-5">
-        <div class="col d-none d-lg-block">
+        <div class="col d-none d-sm-block">
             <img src="images/dictionary.png" class="img-fluid float-end" alt="Coming soon" />
         </div>
         <div class="col">
