Adjuste color palette

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="images/weather-home.svg" class="img-fluid" alt="Neon Weather App">
     </a>
     <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-37-0/projects/141317" target=”_blank” title="View SheTravels Project">
-        <img src="images/shetravels-home.svg" class="img-fluid" alt="SheTravels landing page">
+        <img src="images/shetravels-home.png" class="img-fluid" alt="SheTravels landing page">
         </a>
     </div>
     <footer>
