--- a/work.html
+++ b/work.html
@@ -56,27 +56,27 @@
         <div class="col d-none d-sm-block">
             <img src="images/weather-work.png" class="img-fluid float-end" alt="Weather app" />
         </div>
-        <div class="col">
+        <div class="col my-auto">
             <div class="project-description">
                 <h3 class="mb-4">Neon Weather App</h3>
                 <p class="fw-light">
                     A fun weather application that I built as part of SheCodes React Workshop that uses OpenWeatherMap API to pull data for
                     over 200,000 cities across the globe. Built with HTML, CSS, JS & React
                 </p>
-                <div class="mt-5">
+                <div class="mt-4">
                     <a href="https://hopeful-poincare-7b41bf.netlify.app" target="_blank" class="btn btn-branding" title="Check out Weather App">Learn more</a>
                 </div>
             </div>
         </div>
     </div>
     <div class="row mt-5">
-        <div class="col">
+        <div class="col my-auto">
             <div class="project-description2">
                 <h3 class="mb-4">SheTravels Landing Page</h3>
                 <p class="fw-light">
                     A simple landing page that I built as part of SheCodes Basics Workshop. Built with HTML, CSS & JS
                 </p>
-                <div class="mt-5">
+                <div class="mt-4">
                     <a href="https://www.shecodes.io/workshops/shecodes-online-workshop-37-0/projects/141317" class="btn btn-branding" title="Check out SheTravels Page">Learn more</a>
                 </div>
             </div>
@@ -89,7 +89,7 @@
         <div class="col d-none d-sm-block">
             <img src="images/dictionary.png" class="img-fluid float-end" alt="Coming soon" />
         </div>
-        <div class="col">
+        <div class="col my-auto">
             <div class="project-description text-start">
                 <h3 class="mb-4">Dictionary App</h3>
                 <p class="fw-light">
