--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img src="images/photo.png" alt="my photo" class="img-fluid" />
+            <img src="images/photo.png" alt="my photo" class="img-fluid rounded" />
         </div>
     </div>
 </div>
