--- a/about.html
+++ b/about.html
@@ -23,8 +23,8 @@
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
     <div class="container">
-        <a class="navbar-brand" href="/">
-            <img src="images/logo.png" class="logo" alt="MZ logo">
+        <a class="navbar-brand logo" href="/">
+            MZ
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,8 +52,8 @@
     <div class="row">
         <div class="col-md-6 my-auto">
             <div class="about-content mt-4">
-                <h3 class="mb-1">About me</h3>
-                <h2 class="mb-4">Maya</h2>
+                <h3 class="mb-4">About me</h3>
+                <h2 class="mb-5">Maya</h2>
                 <p class="fw-bold mb-1">
                     It is nice to meet you!
                 </p>
