--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
     <div class="container">
-        <a class="navbar-brand" href="/">
-            <img src="images/logo.png" class="logo" alt="MZ logo">
+        <a class="navbar-brand logo" href="/">
+            MZ
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
