--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
         <div class="container">
-            <a class="navbar-brand" href="/">
-            <img src="images/logo.png" class="logo" alt="MZ logo">
+            <a class="navbar-brand logo" href="/">
+            MZ
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </nav>
-    <div class="hero">
+        <div class="hero">
         <h4>Hello, I am</h4>
         <h1 class="mb-3">Maya Zirne</h1>
         <h3 class="mb-5">/ˈmaː.jaː/ <br /> Aspiring Front-end Developer, based in London, UK</h3>
