--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front-end developer - Maya Zirne</title>
-    <meta name="description" content="Let me introduce myself and showcase some of my coding projects">
+    <title>Contact me - Maya Zirne</title>
+    <meta name="description" content="Get in touch with Maya for work enquiries.">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" />
@@ -24,7 +24,7 @@
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
     <div class="container">
-        <a class="navbar-brand logo" href="/">
+        <a class="navbar-brand logo" href="/" title="Homepage">
             MZ
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -62,7 +62,7 @@
         <br />
         <h5>INSTAGRAM</h5>
         <p><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/mayazirne/" target=”_blank”> @mayazirne</a></p>
-        <a href="/" class="btn btn-branding mobile-btn mt-5" title="Check out my pojects">BACK TO HOMEPAGE</a>
+        <a href="/" class="btn btn-branding mobile-btn mt-5" title="Homepage">BACK TO HOMEPAGE</a>
     </div>
 </div>
 <footer>
