--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
         <div class="container">
-            <a class="navbar-brand logo" href="/">
+            <a class="navbar-brand logo" href="/" title="Homepage">
             MZ
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
