--- a/work.html
+++ b/work.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Front-end developer - Maya Zirne</title>
+    <title>Front-end developer portfolio - Maya Zirne</title>
     <meta name="description" content="Let me introduce myself and showcase some of my coding projects">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -24,7 +24,7 @@
 <body>
 <nav class="navbar sticky-top navbar-expand-lg navbar-light mt-0 top-0 start-0">
     <div class="container">
-        <a class="navbar-brand logo" href="/">
+        <a class="navbar-brand logo" href="/" title="Homepage">
             MZ
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -100,7 +100,7 @@
     </div>
 </div>
 <div class="wrapper">
-    <a href="contact.html" class="btn btn-branding" title="Check out my pojects">GET IN TOUCH</a>
+    <a href="contact.html" class="btn btn-branding" title="Contact me">GET IN TOUCH</a>
 </div>
 <footer>
     <a href="https://uk.linkedin.com/in/maya-zirne-788888100" target=”_blank”>
