Added Netlify link

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
         <a href="https://github.com/mayazirne/portfolio-project-mz" target=”_blank”>
         <i class="fab fa-github"></i>
         </a>
+        <br />
+        <span class="netlify-link">
+        Hosted on 
+        <a href="https://angry-wiles-7d4c0e.netlify.app/" target="_blank" title="Netlify">
+        Netlify
+        </a>
+        </span>
     </footer>
 </body>
 </html>
